修正数据文件中的frame字段 数据文件添加prefix字段 修改resource的简短命令，r改成d 删除对input.makeAbsolute()的assert 在使用配置文件时，同时指定CL参数output或resource，优先使用CL参数 限制spriteSize在maxSize之内 修改数据文件的images字段为image 其他优化

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(atlas_generator)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
+SET(CMAKE_PREFIX_PATH
+        /opt/Qt5.9.0/5.9/gcc_64/lib/cmake/Qt5Core
+        /opt/Qt5.9.0/5.9/gcc_64/lib/cmake/Qt5Gui)
+
 find_package(Qt5Core)
 find_package(Qt5Gui)
 
